# playshelf

./: Cargo.toml  README.md  run.sh  sample.json  sample_users.json
playshelf-client/: Cargo.toml  Dioxus.toml
playshelf-client/assets/: main.css
playshelf-client/src/: api.rs  main.rs
playshelf-server/: Cargo.toml
playshelf-server/src/: args.rs  handlers.rs  igdb.rs  main.rs  user.rs
playshelf-server/src/igdb/: credentials.rs  manager.rs  mod.rs
