[package]
name = "playshelf-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-cognitoidentity = "1.92.0"
aws-sdk-dynamodb = "1.101.0"
aws-sdk-ssm = "1.101.0"
axum = "0.8.6"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ['rt-multi-thread'] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.19.0", features = ["v4"] }
